feat: tableview agora exibe todos os campos